[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Top-down Tanks Asset Pack from Kenney/Spritesheet/onlyObjects_default.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.96707, 4.98856 )

[node name="Bullet" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 198, 46, 4, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DeletaBala" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="DeletaBala" to="." method="_on_DeletaBala_timeout"]
